catalog card flipped on click

--- a/client/index.html
+++ b/client/index.html
@@ -220,55 +220,55 @@
         -->
 
         <section class="catalogs">
-            <div class="catalogs_box_1">
-                <div class="catalogs_box_card_1">
-                <div class="front_1">
-                    <h3 class="catalogs_box_heading">Motorcycles</h3>
-                    <p class="catalogs_box_text"></p>
-                </div>
-                <div class="back_1">
-                    <p class="catalogs_box_text">Your riding journey starts here! We offer a wide selection of motorcycles from top global brands, ranging from high-speed sport bikes to comfortable cruisers. Each motorcycle is carefully chosen to provide the perfect blend of power, performance, and design.</p>
-                    <a href="pages/catalog.html?category=motorcycles" class="catalog_link_1"><button class="catalog_button">See More</button></a>
-                </div>
+            <div class="catalogs_box">
+                <div class="catalogs_box_card">
+                    <div class="front_1">
+                        <h3 class="catalogs_box_heading">Motorcycles</h3>
+                        <p class="catalogs_box_text"></p>
+                    </div>
+                    <div class="back_1">
+                        <p class="catalogs_box_text">Your riding journey starts here! We offer a wide selection of motorcycles from top global brands, ranging from high-speed sport bikes to comfortable cruisers. Each motorcycle is carefully chosen to provide the perfect blend of power, performance, and design.</p>
+                        <a href="pages/catalog.html?category=motorcycles" class="catalog_link_1"><button class="catalog_button">See More</button></a>
+                    </div>
                 </div>
             </div>
 
-            <div class="catalogs_box_2">
-                <div class="catalogs_box_card_2">
-                <div class="front_2">
-                    <h3 class="catalogs_box_heading">Gear & Protections</h3>
-                    <p class="catalogs_box_text"></p>
-                </div>
-                <div class="back_2">
-                    <p class="catalogs_box_text">Your safety is our priority! In the Gear Protection category, you’ll find premium helmets, gloves, body armor, and advanced riding jackets. Designed for maximum protection, comfort, and style, our gear ensures a safe, enjoyable, and confident riding experience every time.</p>
-                    <a href="pages/catalog.html?category=gear" class="catalog_link_2"><button class="catalog_button">See More</button></a>
-                </div>
+            <div class="catalogs_box">
+                <div class="catalogs_box_card">
+                    <div class="front_2">
+                        <h3 class="catalogs_box_heading">Gear & Protections</h3>
+                        <p class="catalogs_box_text"></p>
+                    </div>
+                    <div class="back_2">
+                        <p class="catalogs_box_text">Your safety is our priority! In the Gear Protection category, you’ll find premium helmets, gloves, body armor, and advanced riding jackets. Designed for maximum protection, comfort, and style, our gear ensures a safe, enjoyable, and confident riding experience every time.</p>
+                        <a href="pages/catalog.html?category=gear" class="catalog_link_2"><button class="catalog_button">See More</button></a>
+                    </div>
                 </div>
             </div> 
             
-            <div class="catalogs_box_3">
-                <div class="catalogs_box_card_3">
-                <div class="front_3">
-                    <h3 class="catalogs_box_heading">Parts & Accessories</h3>
-                    <p class="catalogs_box_text"></p>
-                </div>
-                <div class="back_3">
-                    <p class="catalogs_box_text">Keep your motorcycle in top shape! Discover a wide range of high-quality spare parts, accessories, and upgrades for all types of motorcycles. All parts meet the highest standards to maintain your bike’s performance for the long haul.</p>
-                    <a href="pages/catalog.html?category=parts" class="catalog_link_3"><button class="catalog_button">See More</button></a>
-                </div>
+            <div class="catalogs_box">
+                <div class="catalogs_box_card">
+                    <div class="front_3">
+                        <h3 class="catalogs_box_heading">Parts & Accessories</h3>
+                        <p class="catalogs_box_text"></p>
+                    </div>
+                    <div class="back_3">
+                        <p class="catalogs_box_text">Keep your motorcycle in top shape! Discover a wide range of high-quality spare parts, accessories, and upgrades for all types of motorcycles. All parts meet the highest standards to maintain your bike’s performance for the long haul.</p>
+                        <a href="pages/catalog.html?category=parts" class="catalog_link_3"><button class="catalog_button">See More</button></a>
+                    </div>
                 </div>
             </div>
             
-            <div class="catalogs_box_4">
-                <div class="catalogs_box_card_4">
-                <div class="front_4">
-                    <h3 class="catalogs_box_heading">Upgrades</h3>
-                    <p class="catalogs_box_text"></p>
-                </div>
-                <div class="back_4">
-                    <p class="catalogs_box_text">Take your ride to the next level! Explore cutting-edge technology to enhance performance, information, and comfort while riding. Smart gadgets, navigation systems, advanced sensors, and more - all designed to make your riding experience smarter and more exciting.</p>
-                    <a href="pages/catalog.html?category=upgrades" class="catalog_link_4"><button class="catalog_button">See More</button></a>
-                </div>
+            <div class="catalogs_box">
+                <div class="catalogs_box_card">
+                    <div class="front_4">
+                        <h3 class="catalogs_box_heading">Upgrades</h3>
+                        <p class="catalogs_box_text"></p>
+                    </div>
+                    <div class="back_4">
+                        <p class="catalogs_box_text">Take your ride to the next level! Explore cutting-edge technology to enhance performance, information, and comfort while riding. Smart gadgets, navigation systems, advanced sensors, and more - all designed to make your riding experience smarter and more exciting.</p>
+                        <a href="pages/catalog.html?category=upgrades" class="catalog_link_4"><button class="catalog_button">See More</button></a>
+                    </div>
                 </div>
             </div>
         </section>
